Switched to jdk 8